--- a/travis.yml
+++ b/travis.yml
@@ -10,34 +10,34 @@ env:
     # - OS=mac # add this too to let the script know that the OS is a mac
     # - ARCH=i686 # add this to run in 32-bit mode. See availability at README
       # SAUCE_ACCESS_KEY
-    - secure: "YOUR_ENCRYPTED_SAUCE_ACCESS_KEY" # if you want to use SauceLabs
+    #- secure: "YOUR_ENCRYPTED_SAUCE_ACCESS_KEY" # if you want to use SauceLabs
       # SAUCE_USERNAME
-    - secure: "YOUR_ENCRYPTED_SAUCE_USERNAME" # if you want to use SauceLabs
+    #- secure: "YOUR_ENCRYPTED_SAUCE_USERNAME" # if you want to use SauceLabs
   matrix:
     - TARGET=neko 
       # optional: FILENAME
-    - TARGET=interp
-    - TARGET=macro
+    #- TARGET=interp
+    #- TARGET=macro
       # optional: MACROFLAGS: specify the flags that are unique to building/running with --macro arguments
-    - TARGET=js TOOLCHAIN=default # target is tested by node.js
+    #- TARGET=js TOOLCHAIN=default # target is tested by node.js
       # optional: FILENAME
       # optional: NODECMD: set the command to be run by nodejs
-    - TARGET=js TOOLCHAIN=browser # target is tested by browsers / phantomjs
+    #- TARGET=js TOOLCHAIN=browser # target is tested by browsers / phantomjs
       # optional: FILENAME
       # optional: SAUCE_BROWSERS: specify the .json file that specifies the SauceLabs browsers to test. Defaults to `.sauce-browsers.json`
-    - TARGET=php
+    #- TARGET=php
       # optional: FILENAME
-    - TARGET=cpp
+    #- TARGET=cpp
       # optional: FILENAME
-    - TARGET=swf
+    #- TARGET=swf
       # optional: FILENAME
-    - TARGET=as3 
+    #- TARGET=as3 
       # optional: FILENAME
-    - TARGET=java
+    #- TARGET=java
       # optional: FILENAME
-    - TARGET=cs
+    #- TARGET=cs
       # optional: FILENAME
-    - TARGET=python
+    #- TARGET=python
       # optional: FILENAME
       # optional: PYTHONCMD
 
@@ -61,7 +61,7 @@ install: # setup the target
 script:
   - cd $TRAVIS_BUILD_DIR
   # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main AllTests" ~/travis-hx/build.sh
+  - HXFLAGS="-cp src -main AllTests -lib uhu-spec -lib wait" ~/travis-hx/build.sh
   # run the tests
   - ~/travis-hx/runtests.sh $FILENAME # this will set the $FILENAME defined on the environment variable to run the tests
 
