Probably shouldn't be trying this while tired :/

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ before_install: # clone travis-hx repo
 install: # setup the target
   - ~/travis-hx/setup.sh
   - zip -r local.zip ./
-  - haxelib local wait ./local.zip
+  - haxelib local ./local.zip
   - haxelib install utest
   - haxelib git uhu https://github.com/skial/uhu experimental
   - haxelib git klas https://github.com/skial/klas master
