--- a/.travis.yml
+++ b/.travis.yml
@@ -48,15 +48,16 @@ matrix:
 
 before_install: # clone travis-hx repo
   - travis_retry git clone --depth=50 --branch=master git://github.com/waneck/travis-hx.git ~/travis-hx
+  - wget -O uhu.zip uhu-spec https://github.com/skial/uhu/archive/experimental.zip
+  - wget -O klas.zip uhu-spec https://github.com/skial/klas/archive/master.zip
+  - wget -O uhu-spec.zip uhu-spec https://github.com/skial/uhu-spec/archive/master.zip
 
 install: # setup the target
   - ~/travis-hx/setup.sh
-  - zip -r local.zip ./
   - haxelib install utest
-  - haxelib git uhu https://github.com/skial/uhu experimental src
-  - haxelib git klas https://github.com/skial/klas master src
-  - haxelib local ./local.zip
-  - haxelib git uhu-spec https://github.com/skial/uhu-spec master
+  - unzip -q -o uhu.zip
+  - unzip -q -o klas.zip
+  - unzip -q -o uhu-spec.zip
 
 script:
   - cd $TRAVIS_BUILD_DIR
