--- a/.travis.yml
+++ b/.travis.yml
@@ -62,7 +62,7 @@ install: # setup the target
 script:
   - cd $TRAVIS_BUILD_DIR
   # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main AllTests" ~/travis-hx/build.sh
+  - HXFLAGS="-cp src -main AllTests -D wait -D klas" ~/travis-hx/build.sh
   # run the tests
   - ~/travis-hx/runtests.sh $FILENAME # this will set the $FILENAME defined on the environment variable to run the tests
 
