--- a/.travis.yml
+++ b/.travis.yml
@@ -58,9 +58,9 @@ install: # setup the target
   - unzip -o -d ./ uhu.zip
   - unzip -o -d ./ klas.zip
   - unzip -o -d ./ uhu-spec.zip
-  - mv uhu-experimental/* ./
-  - mv klas-master/* ./
-  - mv uhu-spec-master/* ./
+  - mv -f uhu-experimental/* ./
+  - mv -f klas-master/* ./
+  - mv -f uhu-spec-master/* ./
 
 script:
   - cd $TRAVIS_BUILD_DIR
