--- a/.travis.yml
+++ b/.travis.yml
@@ -58,17 +58,17 @@ install: # setup the target
   - unzip -o -d ./ uhu.zip
   - unzip -o -d ./ klas.zip
   - unzip -o -d ./ uhu-spec.zip
-  - haxelib dev uhu ./uhu-experimental/
+  #- haxelib dev uhu ./uhu-experimental/
   - haxelib dev klas ./klas-master/
   #- haxelib dev uhu-spec ./uhu-spec-master/
-  #- cp -R uhu-experimental/* ./
+  - cp -R uhu-experimental/* ./
   #- cp -R klas-master/* ./
   - cp -R uhu-spec-master/* ./
 
 script:
   - cd $TRAVIS_BUILD_DIR
   # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main AllTests -lib uhu -lib uhu-spec -D wait -lib klas -lib utest -debug" ~/travis-hx/build.sh
+  - HXFLAGS="-cp src -main AllTests -D wait -lib klas -lib utest -debug" ~/travis-hx/build.sh
   # run the tests
   - ~/travis-hx/runtests.sh $FILENAME # this will set the $FILENAME defined on the environment variable to run the tests
 
