--- a/.travis.yml
+++ b/.travis.yml
@@ -68,7 +68,7 @@ install: # setup the target
 script:
   - cd $TRAVIS_BUILD_DIR
   # build the target. This will call haxe with the HXFLAGS and HXFLAGS_EXTRA environment variables
-  - HXFLAGS="-cp src -main AllTests -D wait -lib klas -lib utest -debug" ~/travis-hx/build.sh
+  - HXFLAGS="-cp src -main AllTests -D wait -lib klas -D klas_verbose -lib utest -debug" ~/travis-hx/build.sh
   # run the tests
   - ~/travis-hx/runtests.sh $FILENAME # this will set the $FILENAME defined on the environment variable to run the tests
 
