--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ env:
       # optional: FILENAME
     #- TARGET=as3 
       # optional: FILENAME
-    #- TARGET=java
+    - TARGET=java
       # optional: FILENAME
     #- TARGET=cs
       # optional: FILENAME
