--- a/.travis.yml
+++ b/.travis.yml
@@ -50,21 +50,19 @@ before_install: # clone travis-hx repo
   - travis_retry git clone --depth=50 --branch=master git://github.com/waneck/travis-hx.git ~/travis-hx
   - wget -O uhu.zip https://github.com/skial/uhu/archive/experimental.zip
   - wget -O klas.zip https://github.com/skial/klas/archive/master.zip
-  - wget -O uhu-spec.zip https://github.com/skial/uhu-spec/archive/master.zip
+  - wget -O hxjava.zip https://github.com/HaxeFoundation/hxjava/archive/master.zip
+  - wget -O hxcs.zip https://github.com/HaxeFoundation/hxcs/archive/master.zip
 
 install: # setup the target
   - ~/travis-hx/setup.sh
-  - haxelib install hxcs
-  - haxelib install hxjava
   - haxelib install utest
   - unzip -o -d ./ uhu.zip
   - unzip -o -d ./ klas.zip
   - unzip -o -d ./ uhu-spec.zip
-  #- haxelib dev uhu ./uhu-experimental/
+  - haxelib dev hxcs ./hxcs-master/
+  - haxelib dev hxjava ./hxjava-master/
   - haxelib dev klas ./klas-master/
-  #- haxelib dev uhu-spec ./uhu-spec-master/
   - cp -R uhu-experimental/* ./
-  #- cp -R klas-master/* ./
   - cp -R uhu-spec-master/* ./
 
 script:
