--- a/.travis.yml
+++ b/.travis.yml
@@ -50,6 +50,7 @@ before_install: # clone travis-hx repo
   - travis_retry git clone --depth=50 --branch=master git://github.com/waneck/travis-hx.git ~/travis-hx
   - wget -O uhu.zip https://github.com/skial/uhu/archive/experimental.zip
   - wget -O klas.zip https://github.com/skial/klas/archive/master.zip
+  - wget -O uhu-spec.zip https://github.com/skial/uhu-spec/archive/master.zip
   - wget -O hxjava.zip https://github.com/HaxeFoundation/hxjava/archive/master.zip
   - wget -O hxcs.zip https://github.com/HaxeFoundation/hxcs/archive/master.zip
 
