Disable java target and enable python.

--- a/.travis.yml
+++ b/.travis.yml
@@ -33,11 +33,11 @@ env:
       # optional: FILENAME
     #- TARGET=as3 
       # optional: FILENAME
-    - TARGET=java
+    #- TARGET=java
       # optional: FILENAME
     #- TARGET=cs
       # optional: FILENAME
-    #- TARGET=python
+    - TARGET=python
       # optional: FILENAME
       # optional: PYTHONCMD
 
