--- a/.travis.yml
+++ b/.travis.yml
@@ -31,7 +31,7 @@ env:
       # optional: FILENAME
     - TARGET=swf
       # optional: FILENAME
-    - TARGET=as3 
+    #- TARGET=as3 
       # optional: FILENAME
     #- TARGET=java
       # optional: FILENAME
